# QS_ArchNeuralNet

./: CMakeLists.txt  QS_ArchNeuralNet.pro  abernanit.txt  readme.md
maple/: fileconversion.mw  index.mw
matlab/graphs/: KernelCover.m  animate.m  animateC.m  dispim.m  kernelpic.m  mask.m  sumOut.m
matlab/neuralnet/: activate2d.m  activate3d.m  antidropout.m  biasChange2d.m  biasChange3d.m  calcError2d.m  calcError3d.m  convertInput.m  convolve2d.m  convolve3d.m  convolve3d5.m  cycle.asv  cycle.m  cycle2d.m  cycle3d.m  dropout.asv  dropout.m  forward3d.m  fullyConnected.m  fullyConnectedBackpass.m  fullyConnectedWeightChanges.m  inputErrorSignal2d.m  inputErrorSignal3d.m  kernelChange2d.m  kernelChange3d.m  leftErrorSignal2d.m  leftErrorSignal3d.m  neuronLeakyReLU.m  neuronLeakyReLUBackpass.m  neuronSoftmax.m  neuronSoftmaxBackpass.asv  neuronSoftmaxBackpass.m  neuronSoftmaxMinTranslation.m  nonHiddenBoth.m  noneHidden.asv  noneHidden.m  outputErrorSignal.asv  outputErrorSignal.m  pooling2d.m  pooling3d.m  (+16 more)
src/: dimension.cpp  dimension.h  environment.h  logging.h  main.cpp  module.cpp  module.h  randomdevice.cpp  randomdevice.h
src/convert/: coordinatetransformation.cpp  coordinatetransformation.h  indexprovider.cpp  indexprovider.h  qgprawdata.cpp  qgprawdata.h
src/data/: filename.h  qgpbatch.cpp  qgpbatch.h  qgpclassification.h  qgpdata.cpp  qgpdata.h  qgpdimension.h  qgpgriddata.cpp  qgpgriddata.h  qgpparticledata.cpp  qgpparticledata.h  qgprandombatch.cpp  qgprandombatch.h  qgpsequentialbatch.cpp  qgpsparsedata.cpp  (+6 more)
test/: test.cpp  testutil.cpp  testutil.h
(+142 files in other folders)
